# time_series_clustering

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
experiment_framework/: experiment.yaml  experiment_workbook.ipynb  framework_test.ipynb  pyproject.toml  run_experiment.py
experiment_framework/experiments/: experiment.py  kernel_container.py  model_container.py  sub_experiment.py  time_series_data.py
experiment_framework/jacobian_gaussian_test/: experiment_config.yaml  results.csv
experiment_framework/model_comparison/: experiment_config.yaml  results.csv
experiment_framework/test_experiment/: experiment_config.yaml  results.csv
experiment_framwwork/: data.csv  experiment.yaml  experiment_workbook.ipynb  workbook1.ipynb
experiment_framwwork/experiments/: experiment.py  sub_experiment.py  time_series_data.py
experiments/Clustering on Gaussians/: experiment.ipynb
experiments/Clustering on sine curves - different clusters/: experiment.ipynb
experiments/Clustering on sine curves - same clusters/: experiment.ipynb
notebooks/: clustering.ipynb  clustering_comparison.ipynb  clustering_per_ds.ipynb  clustering_test.ipynb  clustering_test_gausian_dynamics.ipynb  experiment.yaml  experimentTemplates.ipynb  hilbert_space_mapping_test.ipynb  jacobian_bandwidth.ipynb  jacobian_test.ipynb  timeSeriesKRR.ipynb  timeSeriesRascutti.ipynb  understanding_sin_fits.ipynb
notebooks/depricated/: clustering_algo_test.ipynb  (+3 more)
time_series/: __init__.py  config.py  dataset.py  features.py  plots.py
(+19 files in other folders)
