[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-research-tools"
version = "0.0.1"
description = "Both time_series and experiments packages"
authors = [{name = "James Lavis"}]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["time_series", "experiment_framework.experiments"]
